# FXFR

./: .gitignore  .repo-role  GEMINI.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  test.txt
.github/workflows/: ci.yml  release-desktop.yml
FIGMA UI INTERFACE/FRED/: pnpm-lock.yaml
FIGMA UI INTERFACE/FRED/app/: App.tsx
apps/desktop/: README.md  eslint.config.js  index.html  package.json  tsconfig.tsbuildinfo
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/resources/engine/_internal/websockets-16.0.dist-info/: RECORD
apps/desktop/src-tauri/src/: main.rs
docs/: CURRENT_STATE_REPORT.md  MASTER_CONTROL.md  decision-change-control.md  decision-changelog.md  legacy-parity-matrix.md  project-specification.md  release-gate-checklist.md  v1-backlog.md  v1-decision-ledger.md  versions of environtment.json
docs/adr/: 0001-architecture-baseline.md
docs/templates/: decision-change-template.md  release-attestation.template.json
scripts/desktop/: build_engine_sidecar.ps1  dev_desktop.ps1  dev_engine.ps1  dev_fullstack.ps1  doctor.ps1  release_gate.ps1  soak_24h.ps1  soak_startup_cycles.ps1  test_engine.ps1  verify_package_artifacts.ps1
services/engine/: .env.example  README.md  fxfr-engine.spec  pyproject.toml  requirements.txt  sidecar_main.py
services/engine/app/: __init__.py  main.py
services/engine/tests/: test_api_basics.py  test_contract_snapshots.py  test_job_manager_realtime.py  test_v1_decisions.py
(+40 files in other folders)
