[package]
name = "fxfr_desktop"
version = "0.1.0"
description = "FX Fundamentals Refresher desktop shell"
authors = ["Fyodor"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2.0.2", features = [] }
ureq = { version = "2.10.1", default-features = true, features = ["json"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
